# MOE

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  CONTRIBUTING.md  Concepts.md  Config.md  Directives.md  EditorTypes.md  ExpressionLanguages.md  ProjectHome.md  README  README.md  WORKSPACE  _config.yml  bower.json  build.xml  index.html  index.md  params.json  pom.xml  project.config  workspace_maven_substitutes.bzl
client/src/main/java/com/google/devtools/moe/client/: AbstractFileSystem.java  AbstractMoeExecutable.java  BUILD.bazel  CommandRunner.java  FileSystem.java  GsonModule.java  Injector.java  InvalidProject.java  Lifetimes.java  Moe.java  MoeModule.java  MoeProblem.java  MoeTypeAdapterFactory.java  MoeUserProblem.java  NoopFileSystem.java  NoopFileSystemModule.java  SystemCommandRunner.java  SystemFileSystem.java  Ui.java  Utils.java
client/src/main/java/com/google/devtools/moe/client/codebase/: AbstractExpression.java  Codebase.java  CodebaseCreationError.java  CodebaseCreator.java  CodebaseMerger.java  CodebaseProcessor.java  EditExpression.java  EditedCodebaseProcessor.java  Expression.java  ExpressionEngine.java  ExpressionModule.java  LocalWorkspace.java  Operation.java  Operator.java  Parser.java  RepositoryCodebaseProcessor.java  RepositoryExpression.java  Term.java  TranslateExpression.java  TranslatedCodebaseProcessor.java  WriterFactory.java
client/src/main/java/com/google/devtools/moe/client/config/: BUILD.bazel  ConfigTypeAdapterFactory.java  EditorConfig.java  EditorType.java  MetadataScrubberConfig.java  MigrationConfig.java  ProjectConfig.java  RepositoryConfig.java  ScrubberConfig.java  StepConfig.java  TranslatorConfig.java  UsernamesConfig.java
client/src/main/java/com/google/devtools/moe/client/database/: Bookkeeper.java  Db.java  DbStorage.java  FileDb.java  SubmittedMigration.java
client/src/main/java/com/google/devtools/moe/client/directives/: BookkeepingDirective.java  ChangeDirective.java  CheckConfigDirective.java  CreateCodebaseDirective.java  DetermineMetadataDirective.java  DetermineMigrationsDirective.java  DiffCodebasesDirective.java  Directive.java  Directives.java  FindEquivalenceDirective.java  GithubPullDirective.java  HighestRevisionDirective.java  LastEquivalenceDirective.java  MagicDirective.java  MergeCodebasesDirective.java  MigrateBranchDirective.java  NoteEquivalenceDirective.java  OneMigrationDirective.java
client/src/main/java/com/google/devtools/moe/client/dvcs/: AbstractDvcsCodebaseCreator.java  AbstractDvcsWriter.java
client/src/main/java/com/google/devtools/moe/client/editors/: Editor.java  Editors.java  ForwardTranslator.java  IdentityEditor.java  InverseEditor.java  InverseRenamingEditor.java  InverseTranslator.java  PatchingEditor.java  RenamingEditor.java  ScrubbingEditor.java  ShellEditor.java
client/src/main/java/com/google/devtools/moe/client/github/: GithubAPI.java
client/src/main/java/com/google/devtools/moe/client/gson/: BUILD.bazel  GsonModule.java  GsonUtil.java  ImmutableListDeserializer.java  JsonStructureChecker.java  MoeTypeAdapterFactory.java
client/src/main/java/com/google/devtools/moe/client/migrations/: Migration.java  MigrationConfig.java  Migrator.java
client/src/main/java/com/google/devtools/moe/client/options/: MoeOptions.java  OptionsModule.java  OptionsParser.java
client/src/main/java/com/google/devtools/moe/client/parser/: AbstractExpression.java  CodebaseProcessor.java  EditExpression.java  Expression.java  ExpressionEngine.java  ExpressionModule.java  Operation.java  Parser.java  RepositoryExpression.java  TranslateExpression.java
client/src/main/java/com/google/devtools/moe/client/project/: EditorConfig.java  FileReadingProjectContextFactory.java  ProjectConfig.java  ProjectConfigs.java  ProjectContext.java  ProjectContextFactory.java  RepositoryConfig.java  ScrubberConfig.java  TranslatorConfig.java
client/src/main/java/com/google/devtools/moe/client/qualifiers/: Argument.java  BUILD.bazel  Flag.java
client/src/main/java/com/google/devtools/moe/client/repositories/: AbstractRevisionHistory.java  DescriptionMetadataScrubber.java  MetadataScrubber.java  MetadataUsernameScrubber.java  OriginalAuthorMetadataScrubber.java  PublicSectionMetadataScrubber.java  Repositories.java  RepositoryType.java  Revision.java  RevisionHistory.java  RevisionMetadata.java
client/src/main/java/com/google/devtools/moe/client/svn/: SvnCodebaseCreator.java  SvnDraftRevision.java  SvnRepositoryFactory.java  SvnRevisionHistory.java  SvnUtil.java  SvnWriter.java  SvnWriterCreator.java
client/src/main/java/com/google/devtools/moe/client/testing/: DummyCodebaseCreator.java  DummyCommit.java  DummyDb.java  DummyDraftRevision.java  DummyRepositoryFactory.java  DummyRevisionHistory.java  DummyWriter.java  FileCodebaseCreator.java  InMemoryFileSystem.java  InMemoryProjectContextFactory.java  TestingModule.java
client/src/main/java/com/google/devtools/moe/client/tools/: CodebaseDiffer.java  CodebaseDifference.java  EagerLazy.java  FileDifference.java  TarUtils.java
client/src/main/java/com/google/devtools/moe/client/writer/: DraftRevision.java  Writer.java  WritingError.java
client/src/test/java/com/google/devtools/moe/client/: AbstractFileSystemTest.java  BUILD.bazel  NullFileSystemModule.java  SystemCommandRunnerTest.java  SystemFileSystemTest.java  TaskTest.java  UtilsTest.java
client/src/test/java/com/google/devtools/moe/client/codebase/: BUILD.bazel  CodebaseMergerTest.java  CodebaseTest.java  ExpressionProcessingTest.java  ExpressionProcessingTest.kt  FileCodebaseCreatorTest.java  ParserTest.java  RepositoryExpressionTest.java  TermTest.java
client/src/test/java/com/google/devtools/moe/client/database/: BUILD.bazel  FileDbTest.java  RepositoryEquivalenceMatcherTest.java  RepositoryEquivalenceTest.java
client/src/test/java/com/google/devtools/moe/client/directives/: BUILD.bazel  BookkeepingDirectiveTest.java  ChangeDirectiveTest.java  CreateCodebaseDirectiveTest.java  DetermineMetadataDirectiveTest.java  FindEquivalenceDirectiveTest.java  (+6 more)
tools/auto/: BUILD.bazel
(+680 files in other folders)
