load("//tools/build_defs:tests.bzl", "jvm_unit_test")

jvm_unit_test(
    name = "FileDbTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/code/gson",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//org/easymock",
        "@maven//org/mockito:mockito-core",
        "@maven//org/objenesis",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "RepositoryEquivalenceMatcherTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//joda-time",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "RepositoryEquivalenceTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)