load("//tools/build_defs:tests.bzl", "jvm_unit_test")

jvm_unit_test(
    name = "AbstractDvcsCodebaseCreatorTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//org/easymock",
        "@maven//org/objenesis",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "DvcsDraftRevisionTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/truth",
        "@maven//org/easymock",
        "@maven//org/objenesis",
        "@maven//junit",
    ],
)