load("//tools/build_defs:tests.bzl", "jvm_unit_test")

jvm_unit_test(
    name = "DescriptionMetadataScrubberTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//com/google/truth",
        "@maven//joda-time",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "MetadataUsernameScrubberTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//joda-time",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "OriginalAuthorMetadataScrubberTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//com/google/truth",
        "@maven//joda-time",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "PublicSectionMetadataScrubberTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//joda-time",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "RepositoriesTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/easymock",
        "@maven//org/objenesis",
    ],
)

jvm_unit_test(
    name = "RevisionMetadataTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//joda-time",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "RevisionTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "@maven//com/google/code/gson",
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)
