load("//tools/build_defs:tests.bzl", "jvm_unit_test")

jvm_unit_test(
    name = "SvnCodebaseCreatorTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/easymock",
        "@maven//org/objenesis",
    ],
)

jvm_unit_test(
    name = "SvnDraftRevisionTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "SvnRevisionHistoryTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//joda-time",
        "@maven//junit",
        "@maven//org/easymock",
        "@maven//org/objenesis",
    ],
)

jvm_unit_test(
    name = "SvnWriterCreatorTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//com/google/dagger",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/easymock",
        "@maven//org/objenesis",
    ],
)

jvm_unit_test(
    name = "SvnWriterTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "@maven//com/google/dagger",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//javax/inject:javax_inject",
        "@maven//joda-time",
        "@maven//junit",
        "@maven//org/easymock",
        "@maven//org/objenesis",
    ],
)
