load("//tools/build_defs:tests.bzl", "jvm_unit_test")

jvm_unit_test(
    name = "CodebaseDifferenceTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/mockito:mockito-core",
        "@maven//org/objenesis",
    ],
)

jvm_unit_test(
    name = "FileDifferenceTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/easymock",
        "@maven//org/objenesis",
    ],
)

jvm_unit_test(
    name = "PatchCodebaseDifferenceRendererTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "TarUtilsTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/easymock",
        "@maven//org/objenesis",
    ],
)
