load("//tools/build_defs:tests.bzl", "jvm_unit_test")

jvm_unit_test(
    name = "ParserTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "RepositoryExpressionTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "//client/src/main/java/com/google/devtools/moe/client/qualifiers",
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "@maven//com/google/dagger",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//javax/inject:javax_inject",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "TermTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)

