load("//tools/build_defs:tests.bzl", "jvm_unit_test")

jvm_unit_test(
    name = "GitClonedRepositoryTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//org/easymock",
        "@maven//org/objenesis",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "GitRevisionHistoryTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//org/easymock",
        "@maven//org/objenesis",
        "@maven//joda-time",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "GitWriterTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//org/easymock",
        "@maven//org/objenesis",
        "@maven//junit",
    ],
)