load("//tools/build_defs:tests.bzl", "jvm_unit_test")

jvm_unit_test(
    name = "HgClonedRepositoryTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "@maven//cglib:cglib_nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//org/easymock",
        "@maven//org/objenesis",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "HgRevisionHistoryTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "@maven//cglib:cglib_nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//org/easymock",
        "@maven//org/objenesis",
        "@maven//joda-time:joda_time",
        "@maven//junit",
    ],
)

jvm_unit_test(
    name = "HgWriterTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "@maven//cglib:cglib_nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//org/easymock",
        "@maven//org/objenesis",
        "@maven//joda-time:joda_time",
        "@maven//junit",
    ],
)