load("//tools/build_defs:tests.bzl", "jvm_unit_test")

jvm_unit_test(
    name = "InverseRenamingEditorTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/code/gson",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/easymock",
        "@maven//org/objenesis",
    ],
)

jvm_unit_test(
    name = "PatchingEditorTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/easymock",
        "@maven//org/objenesis",
    ],
)

jvm_unit_test(
    name = "RenamingEditorTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/code/gson",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/easymock",
        "@maven//org/objenesis",
    ],
)

jvm_unit_test(
    name = "ScrubbingEditorTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//com/google/dagger",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/code/gson",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/easymock",
        "@maven//org/objenesis",
    ],
)

jvm_unit_test(
    name = "ShellEditorTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//cglib:cglib-nodep",
        "@maven//com/google/code/gson",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/easymock",
        "@maven//org/objenesis",
    ],
)
